<resources>
    <string name="app_name">PolyPot</string>
    <string name="date_format_day">yyyy-MM-dd</string>
    <string name="date_format_week">yyyy-\'W\'ww</string>
    <string name="date_format_month">yyyy-MM</string>

    <string name="axis_date_format_day">HH:00</string>
    <string name="axis_date_format_week">EEE</string>
    <string name="axis_date_format_month">dd</string>

    <!-- Tabs -->
    <string name="title_water_level">Water level</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_soil_moisture">Soil moisture</string>
    <string name="title_luminosity">Luminosity</string>
    <string name="title_plant">Plant status</string>

    <string name="label_water_level">Water level for %s, in %%.</string>
    <string name="label_temperature">Temperature for %s, in °C.</string>
    <string name="label_soil_moisture">Soil moisture for %s, in %%.</string>
    <string name="label_luminosity">Luminosity for %s, in lx.</string>
    <string name="chart_no_data">No chart data available for %s.</string>
    <string name="limit_target_soil_moisture">Soil moisture threshold</string>

    <!-- Communication -->
    <string name="reception_data_error">An error occurred during the reception of the data.</string>

    <string name="parsing_latest_error">An error occurred during the parsing of the latest data.</string>
    <string name="parsing_no_data">No data for this pot.</string>
    <string name="parsing_watering_error">An error occurred during the parsing of the watering data.</string>
    <string name="parsing_configuration_error">An error occurred during the parsing of the configuration data.</string>
    <string name="parsing_data_error">An error occurred during the parsing of the data.</string>
    <string name="parsing_stats_error">An error occurred during the parsing of the data for stats.</string>

    <string name="configuration_sending">Sending configuration&#8230;</string>
    <string name="configuration_update_error">An error occurred during the transmission of the configuration. Previous value restored.</string>
    <string name="configuration_updated">Configuration updated!</string>

    <string name="command_water_error">An error occurred during the transmission of the command.</string>
    <string name="command_water_sent">Water command sent! The command will take up to %d:%02d:%02d to be applied and appear.</string>
    <string name="command_water_wait">Water command already sent. Please wait %d:%02d:%02d before sending one more.</string>

    <!-- Toolbar -->
    <string name="previous_period">Previous period</string>
    <string name="next_period">Next period</string>
    <string name="current_period">Current period</string>
    <string name="period_mode_day">DAY</string>
    <string name="period_mode_week">WK</string>
    <string name="period_mode_month">MTH</string>

    <!-- Summary -->
    <string name="water_level_unit">%</string>
    <string name="temperature_unit">°C</string>
    <string name="soil_moisture_unit">%</string>
    <string name="luminosity_unit">lx</string>
    <string name="last_watering_unknown">Last watering date unknown.</string>
    <string name="water_plant_button">Water plant</string>
    <string name="plant_status_unknown">Unknown plant status.</string>
    <string name="latest_data_date_unknown">No data</string>

    <string name="plant_status_good">Plant status:\n\nGood</string>
    <string name="plant_status_bad">Plant status:\n\nBad</string>

    <string name="last_watering_format">\'Last watering:\n\'yyyy-MM-dd</string>
    <string name="latest_data_date_format">\'Data from \'yyyy-MM-dd\' \'HH:mm\'.\'</string>

    <!-- Notifications -->
    <string name="notif_water_level_title">Low water level</string>
    <string name="notif_water_level_text">Water level low! Only %.0f %% remaining.</string>
    <string name="notif_battery_level_title">Low battery level</string>
    <string name="notif_battery_level_text">Battery level low! Only %.0f %% remaining.</string>
    <string name="notif_data_title">No new data since more than one day</string>
    <string name="notif_data_text">No new data since more than one day. Please check that your PolyPot is still working.</string>

    <!-- Plant status -->
    <string name="plant_configured">Plant configured:\n%s</string>
    <string name="title_stats">Stats for your plant based on the last seven days:</string>
    <string name="description_stats">(Recommended minimum average value, current average value, recommended maximum average value)</string>
    <string name="what">What?</string>
    <string name="min">Min</string>
    <string name="current">Current</string>
    <string name="max">Max</string>

    <!-- Icons -->
    <string name="water_level_icon">Water level icon</string>
    <string name="temperature_icon">Temperature icon</string>
    <string name="soil_moisture_icon">Soil moisture icon</string>
    <string name="luminosity_icon">Luminosity icon</string>
    <string name="plant_icon">Plant icon</string>
    <string name="pot_icon">Pot icon</string>
    <string name="logo_title_icon">Logo and title icon</string>

    <!-- Pots' list -->
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="pot_deleted">Pot deleted.</string>
    <string name="undo">Undo</string>

    <string name="title_about">About</string>
    <string name="description_about">
        PolyPot is a student project created in the context of the course "Product Design &amp; System Engineering" at EPFL.\n
    </string>
    <string name="authors_about">
        Authors:\n
        \t&#8226; Lénaïc​ ​Frehner\n
        \t&#8226; Nicolas​ ​Maalouly\n
        \t&#8226; Loïc​ ​Niederhauser\n
        \t&#8226; Nathanaël​ ​Restori\n
        \t&#8226; Guillaume​ ​Rivérieulx​ ​de​ ​Varax\n
        \t&#8226; Michael​ ​Spieler
    </string>
    <string name="acknowledgement_about">
        Acknowledgement:\n
        \t&#8226; Jean Cattin - Advisor\n
        \t&#8226; Kamal Gasser - Plant specialist\n
        \t&#8226; Loïc Gandini - Photographer
    </string>
    <string name="button_visit_webiste">Visit our website!</string>

    <!-- Setup pot -->
    <string name="empty_name">Please, enter a name.</string>
    <string name="empty_or_invalid_server">Please, enter a valid server URL.</string>
    <string name="invalid_uuid">Please, enter a valid UUID.</string>
    <string name="pot_already_exists">A pot with this server and UUID already exists.</string>
    <string name="empty_uuid">Please, enter an UUID. You can only add an existing pot with a known UUID.</string>
    <string name="empty_ssid">Please, enter a Wi-Fi SSID.</string>
    <string name="empty_password">Please, enter a Wi-Fi password.</string>
    <string name="checking_server_uuid">Checking server and UUID&#8230;</string>
    <string name="uuid_or_server_not_found">The server and/or the UUID doesn\'t seem to exist.</string>

    <string name="setup_button">(Re)start setup</string>

    <string name="uuid_check_or_generate">Check or generate UUID with server.</string>
    <string name="wifi_disconnect_user">Disconnect from your Wi-Fi.</string>
    <string name="wifi_connect_pot">Connect to pot\'s Wi-Fi.</string>
    <string name="configuration_send">Send configuration to the pot.</string>
    <string name="wifi_disconnect_pot">Disconnect from pot\'s Wi-Fi.</string>
    <string name="wifi_reconnect_user">Reconnect to your Wi-Fi.</string>

    <string name="tick_icon">Tick icon</string>
    <string name="cross_icon">Cross icon</string>

    <string name="setup_success">Setup successful!</string>
    <string name="finish">finish</string>
    <string name="setup_success_message">
        The pot will now try to connect to your Wi-Fi and contact the server.\n\n
        If the LED on the control module switch back to red, the pot failed to connect to your Wi-Fi or
        to contact the server and you should restart the setup procedure.\n\n
        If the LED on the control module switch to green and then off, the pot is now working.
    </string>
    <string name="setup_error">Error during setup. Restart setup or edit setup settings.</string>
    <string name="edit">Edit</string>

    <!-- Configuration -->
    <string name="add_existing">Add exist.</string>
    <string name="setup_pot_and_add">Setup Pot &amp; Add</string>

    <string name="conf_category_general">General settings (for add and pot setup)</string>

    <string name="conf_name_title">Pot name</string>
    <string name="conf_name_summary">The name used in the pots\' list.</string>
    <string name="conf_name_hint">Enter a name.</string>
    <string name="conf_server_title">Server address</string>
    <string name="conf_server_summary">The address of the server you want to use.</string>
    <string name="conf_server_hint">Enter a server URL.</string>
    <string name="conf_uuid_title">Pot UUID</string>
    <string name="conf_uuid_summary">The unique identifier of your pot. Leave blank unless you want to add an existing pot.</string>
    <string name="conf_uuid_hint">Leave blank or enter an UUID.</string>
    <string name="conf_color_title">Background color</string>
    <string name="conf_color_summary">The background color of the pot icon.</string>

    <string name="conf_category_wifi">Wi-Fi settings (for pot setup)</string>

    <string name="conf_ssid_title">Wi-Fi SSID</string>
    <string name="conf_ssid_summary">The SSID (or name) of the Wi-Fi the pot will use.</string>
    <string name="conf_ssid_hint">Enter an SSID for setup.</string>
    <string name="conf_password_title">Wi-Fi password</string>
    <string name="conf_password_summary">The password of the Wi-Fi the pot will use.</string>
    <string name="conf_password_hint">Enter a password for setup.</string>

    <string name="conf_category_pot">Pot configuration (optional)</string>

    <string name="conf_target_soil_moisture_title">Soil moisture threshold</string>
    <string name="conf_target_soil_moisture_summary">Threshold at which the pot waters the plant, in percents.</string>
    <string name="conf_water_volume_pumped_title">Water volume pumped</string>
    <string name="conf_water_volume_pumped_summary">Volume pumped when pot waters the plant, in mL.</string>
    <string name="conf_logging_interval_title">Logging interval</string>
    <string name="conf_logging_interval_summary">Interval at which the pot take measures, in seconds.</string>
    <string name="conf_sending_interval_title">Sending interval</string>
    <string name="conf_sending_interval_summary">Interval at which the pot send measurement, in seconds.</string>
    <string name="conf_water_tank_title">Water tank</string>
    <string name="conf_water_tank_summary">The water tank you use.</string>
    <string name="conf_plant_title">Plant</string>
    <string name="conf_plant_summary">The plant specie in your pot.</string>
</resources>
