<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.epfl.pdse.polypotapp.ActivityMain">
    <item
        android:id="@+id/previous_day"
        android:icon="@drawable/ic_arrow_left"
        android:title="@string/previous_period"
        app:showAsAction="always" />
    <item
        android:id="@+id/current_day"
        android:title="@string/current_period"
        app:showAsAction="always" />
    <item
        android:id="@+id/next_day"
        android:icon="@drawable/ic_arrow_right"
        android:title="@string/next_period"
        app:showAsAction="always" />
    <item
        android:id="@+id/date_mode"
        android:title="@string/period_mode_day"
        app:showAsAction="always" />
</menu>
