<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.pdse.polypotapp.ActivityMain">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/title_plant"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/configured_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/plant_configured"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_plant" />

            <TextView
                android:id="@+id/description_plant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/description_spacing"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/configured_plant" />

            <TextView
                android:id="@+id/title_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/description_spacing"
                android:text="@string/title_stats"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_plant" />

            <android.support.v7.widget.GridLayout
                android:id="@+id/table_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_stats">

                <TextView
                    android:id="@+id/what_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/what"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_row="0"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/min_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_row="0"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/current_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/current"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_column="2"
                    app:layout_columnWeight="1"
                    app:layout_row="0"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/max_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_column="3"
                    app:layout_columnWeight="1"
                    app:layout_row="0"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/what_water_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_water_level"
                    android:textAlignment="center"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_row="1"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/min_water_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_row="1"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/current_water_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="2"
                    app:layout_columnWeight="1"
                    app:layout_row="1"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/max_water_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="3"
                    app:layout_columnWeight="1"
                    app:layout_row="1"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/what_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_temperature"
                    android:textAlignment="center"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_row="2"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/min_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_row="2"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/current_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="2"
                    app:layout_columnWeight="1"
                    app:layout_row="2"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/max_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="3"
                    app:layout_columnWeight="1"
                    app:layout_row="2"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/what_soil_moisture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_soil_moisture"
                    android:textAlignment="center"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_row="3"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/min_soil_moisture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_row="3"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/current_soil_moisture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="2"
                    app:layout_columnWeight="1"
                    app:layout_row="3"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/max_soil_moisture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="3"
                    app:layout_columnWeight="1"
                    app:layout_row="3"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/what_luminosity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_luminosity"
                    android:textAlignment="center"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_row="4"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/min_luminosity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_row="4"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/current_luminosity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="2"
                    app:layout_columnWeight="1"
                    app:layout_row="4"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/max_luminosity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_column="3"
                    app:layout_columnWeight="1"
                    app:layout_row="4"
                    app:layout_rowWeight="1" />

            </android.support.v7.widget.GridLayout>

            <TextView
                android:id="@+id/description_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/description_stats"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/table_stats" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.v4.widget.SwipeRefreshLayout>